[package]
name = "raffineria"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
log = "0.4.6"
env_logger = "0.6.1"
log4rs = "0.8.3"

failure = {version = "0.1.5", features = ["derive"]}

futures = "0.1.26"
tokio = "0.1.18"
tokio-codec = "0.1.1"
bytes = "0.4.12"

tokio-io = "0.1.12"
tokio-stdin-stdout = "0.1.5"
tokio-process = "0.2.3"
libc = "0.2.51"

boxfnonce = "0.1.1"
lazy_static = "1.3.0"

serde = {version = "1.0.90", features = ["derive"]}
serde_json = "1.0.39"
serde_yaml = "0.8.8"
avro-rs = { git = "https://github.com/RGafiyatullin/avro-rs.git", tag = "rg-adt-serde-1554314671" }

maplit = "1.0.1"


# yaml-rust = "0.4.3"
